[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/mockup.png" type="Texture" id=1]
[ext_resource path="res://components/in_play_clickable.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/anchor.gd" type="Script" id=3]
[ext_resource path="res://entities/dock.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.2851
height = 80.1025

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.7851, 74.7641 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.4616, 55.2299 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.6344, 12.7457 )

[node name="small_dock" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5.98738, 40.7142 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.2925, 41.6942 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 673.821, 190.139, 174.591, 327.657 )

[node name="in_play_clickable" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="in_play_clickable" index="0"]
visible = false
position = Vector2( 4.38908, 40.9648 )
shape = SubResource( 2 )

[node name="Sprite" parent="in_play_clickable" index="1"]
position = Vector2( 2.38393, 49.3815 )

[node name="path" type="Area2D" parent="."]
position = Vector2( 2.09502, 65.6437 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="path"]
visible = false
position = Vector2( 1.39667, -10.8826 )
shape = SubResource( 3 )

[node name="end" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="end"]
visible = false
position = Vector2( -2.095, -11.0738 )
shape = SubResource( 4 )

[node name="anchor" type="Position2D" parent="."]
position = Vector2( 4.19119, 126.334 )
script = ExtResource( 3 )

[node name="spawner" type="Position2D" parent="."]
position = Vector2( 6.3175, 84.8353 )

[node name="target" type="Position2D" parent="."]
position = Vector2( -5.41504, -29.7826 )
[connection signal="clicked" from="in_play_clickable" to="." method="_on_clicked"]

[editable path="in_play_clickable"]
